change index name and test

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="content">
         <h1 class="text-center">App Ideas</h1>
         <ul>
-            <li><a href="/bin2dec/index.html">teste</a></li>
+            <li><a href="/bin2dec/bin2dec.html">teste</a></li>
         </ul>
     </div>
 </body>
