add index with all projects link

--- a/index.html
+++ b/index.html
@@ -7,11 +7,27 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-    <div class="content">
-        <h1 class="text-center">App Ideas</h1>
-        <ul>
-            <li><a href="bin2dec/">teste</a></li>
-        </ul>
+    <div class="container">
+        <h1 class="text-center my-4">App Ideas</h1>
+        <div class="list-group">
+            <a class="list-group-item list-group-item-action" href="bin2dec/">Bin2Dec</a>
+            <a class="list-group-item list-group-item-action" href="border-radius-previewer/">Border Radius Previewer</a>
+            <a class="list-group-item list-group-item-action" href="calculator/">calculator</a>
+            <a class="list-group-item list-group-item-action" href="cause-effect/">Cause & Effect</a>
+            <a class="list-group-item list-group-item-action" href="christmas-lights/">Christmas Lights</a>
+            <a class="list-group-item list-group-item-action" href="color-cycle/">Color Cycle</a>
+            <a class="list-group-item list-group-item-action" href="countdown-timer/">Countdown Timer</a>
+            <a class="list-group-item list-group-item-action" href="dollars-to-cents/">Dollars to Cents</a>
+            <a class="list-group-item list-group-item-action" href="dynamic-css-variables/">Dynamic CSS Variables</a>
+            <a class="list-group-item list-group-item-action" href="first-db/">First DB</a>
+            <a class="list-group-item list-group-item-action" href="flip-image/">Flip Image</a>
+            <a class="list-group-item list-group-item-action" href="github-status/">Github Status</a>
+            <a class="list-group-item list-group-item-action" href="hello/">Hello</a>
+            <a class="list-group-item list-group-item-action" href="iot-mailbox/">IOT Mailbox</a>
+            <a class="list-group-item list-group-item-action" href="javascript-validation-with-regex/">Javascript Validation with Regex</a>
+            <a class="list-group-item list-group-item-action" href="json2csv/">JSON to CSV</a>
+            <a class="list-group-item list-group-item-action" href="key-value/">Key Value</a>
+        </div>
     </div>
 </body>
 </html>
