--- a/lorem-ipsum-generator/index.html
+++ b/lorem-ipsum-generator/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lorem Ipsum Generator</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h1 class="text-center my-4">Lorem Ipsum Generator</h1>
+        <form>
+            <div class="input-group mb-3">
+                <input type="number" class="form-control" placeholder="Number of paragraphs" aria-label="Number of paragraphs" aria-describedby="submit" min="1">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-primary" type="submit" id="submit">Submit</button>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="output">Generated Lorem Ipsum</label>
+                <textarea class="form-control" id="output" rows="10" readonly></textarea>
+            </div>
+        </form>
+    </div>
     <script src="scripts/lipsum.js"></script>
     <script src="scripts/script.js"></script>
 </body>
