--- a/lorem-ipsum-generator/index.html
+++ b/lorem-ipsum-generator/index.html
@@ -12,16 +12,16 @@
         <h1 class="text-center my-4">Lorem Ipsum Generator</h1>
         <form>
             <div class="input-group mb-3">
-                <input type="number" class="form-control" placeholder="Number of paragraphs" aria-label="Number of paragraphs" aria-describedby="submit" min="1">
+                <input type="number" class="form-control" name="paragraph" placeholder="Number of paragraphs" aria-label="Number of paragraphs" aria-describedby="submit" min="1">
                 <div class="input-group-append">
                     <button class="btn btn-outline-primary" type="submit" id="submit">Submit</button>
                 </div>
             </div>
-            <div class="form-group">
-                <label for="output">Generated Lorem Ipsum</label>
-                <textarea class="form-control" id="output" rows="10" readonly></textarea>
-            </div>
         </form>
+        <div class="form-group">
+            <label for="output">Generated Lorem Ipsum</label>
+            <textarea class="form-control" id="output" rows="10" readonly></textarea>
+        </div>
     </div>
     <script src="scripts/lipsum.js"></script>
     <script src="scripts/script.js"></script>
