add lorem ipsum generator project

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <a class="list-group-item list-group-item-action" href="javascript-validation-with-regex/">Javascript Validation with Regex</a>
             <a class="list-group-item list-group-item-action" href="json2csv/">JSON to CSV</a>
             <a class="list-group-item list-group-item-action" href="key-value/">Key Value</a>
+            <a class="list-group-item list-group-item-action" href="lorem-ipsum-generator/">Lorem Ipsum Generator</a>
         </div>
     </div>
 </body>
