--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1 class="text-center my-4">App Ideas</h1>
-        <div class="list-group">
+        <div class="list-group my-4">
             <a class="list-group-item list-group-item-action" href="bin2dec/">Bin2Dec</a>
             <a class="list-group-item list-group-item-action" href="border-radius-previewer/">Border Radius Previewer</a>
             <a class="list-group-item list-group-item-action" href="calculator/">calculator</a>
