add copy function

--- a/lorem-ipsum-generator/index.html
+++ b/lorem-ipsum-generator/index.html
@@ -19,8 +19,11 @@
             </div>
         </form>
         <div class="form-group">
-            <label for="output">Generated Lorem Ipsum</label>
+            <label for="output">Generated Lorem Ipsum:</label>
             <textarea class="form-control" id="output" rows="10" readonly></textarea>
+        </div>
+        <div class="float-right">
+            <button type="button" class="btn btn-primary copy">Copy</button>
         </div>
     </div>
     <script src="scripts/lipsum.js"></script>
