add create, edit and delete cards

--- a/notes/index.html
+++ b/notes/index.html
@@ -14,30 +14,11 @@
             <textarea class="form-control mb-2" name="input" id="input" rows="10"></textarea>
             <div class="d-flex flex-row-reverse">
                 <button class="btn btn-primary" type="submit">Create</button>
-                <button class="btn btn-secondary mr-2" type="submit">Cancel</button>
             </div>
         </form>
-        <div class="card">
-            <div class="card-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pharetra imperdiet felis, non interdum ante luctus quis. Nulla pellentesque, neque at dignissim convallis, lectus mauris varius neque, et mattis diam nunc nec nisl. Donec leo turpis, egestas a convallis gravida, facilisis vel neque. Etiam nec consectetur nunc. Nam erat nisi, efficitur id lectus sit amet, condimentum auctor erat. Donec et magna id mauris congue semper. Duis mollis mollis scelerisque. Vestibulum fermentum nisl et ante suscipit maximus. In cursus lectus quis orci porta, eu semper mi interdum. Ut placerat eu turpis sed mattis. Proin vel eros sollicitudin, cursus eros hendrerit, gravida felis. Nam leo ante, mattis a quam et, porttitor venenatis elit. Donec viverra eros at metus porta, a ornare augue porttitor. Morbi faucibus cursus libero et mollis. Suspendisse leo neque, convallis id justo et, congue tincidunt nibh. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-            </div>
-            <div class="card-footer d-flex justify-content-between align-items-center">
-                <small class="text-muted">Last updated 3 mins ago</small>
-                <div>
-                    <button class="btn btn-primary">
-                        <svg class="bi bi-pencil-square" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M15.502 1.94a.5.5 0 010 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 01.707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 00-.121.196l-.805 2.414a.25.25 0 00.316.316l2.414-.805a.5.5 0 00.196-.12l6.813-6.814z"/>
-                            <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 002.5 15h11a1.5 1.5 0 001.5-1.5v-6a.5.5 0 00-1 0v6a.5.5 0 01-.5.5h-11a.5.5 0 01-.5-.5v-11a.5.5 0 01.5-.5H9a.5.5 0 000-1H2.5A1.5 1.5 0 001 2.5v11z" clip-rule="evenodd"/>
-                          </svg>
-                    </button>
-                    <button class="btn btn-danger">
-                        <svg class="bi bi-trash-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M2.5 1a1 1 0 00-1 1v1a1 1 0 001 1H3v9a2 2 0 002 2h6a2 2 0 002-2V4h.5a1 1 0 001-1V2a1 1 0 00-1-1H10a1 1 0 00-1-1H7a1 1 0 00-1 1H2.5zm3 4a.5.5 0 01.5.5v7a.5.5 0 01-1 0v-7a.5.5 0 01.5-.5zM8 5a.5.5 0 01.5.5v7a.5.5 0 01-1 0v-7A.5.5 0 018 5zm3 .5a.5.5 0 00-1 0v7a.5.5 0 001 0v-7z" clip-rule="evenodd"/>
-                        </svg>
-                    </button>
-                </div>
-            </div>
-        </div>
+        <div class="cards"></div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
