--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <a class="list-group-item list-group-item-action" href="json2csv/">JSON to CSV</a>
             <a class="list-group-item list-group-item-action" href="key-value/">Key Value</a>
             <a class="list-group-item list-group-item-action" href="lorem-ipsum-generator/">Lorem Ipsum Generator</a>
+            <a class="list-group-item list-group-item-action" href="notes/">Notes</a>
         </div>
     </div>
 </body>
