--- a/pearson-regression/index.html
+++ b/pearson-regression/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pearson Regression</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="container">
+        <h1 class="text-center my-4">Pearson Regression</h1>
+        <form>
+            <div class="form-row">
+                <div class="form-group col-sm-6">
+                    <label for="x">X</label>
+                    <input type="text" class="form-control" id="x">
+                </div>
+                <div class="form-group col-sm-6">
+                    <label for="y">Y</label>
+                    <input type="text" class="form-control" id="y">
+                </div>
+            </div>
+            <div class="d-flex justify-content-end">
+                <button class="btn btn-primary mr-2">Add</button>
+                <button class="btn btn-primary" disabled>Calculate</button>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
