--- a/pearson-regression/index.html
+++ b/pearson-regression/index.html
@@ -9,22 +9,36 @@
 <body>
     <div class="container">
         <h1 class="text-center my-4">Pearson Regression</h1>
-        <form>
+        <form class="mb-4">
             <div class="form-row">
                 <div class="form-group col-sm-6">
                     <label for="x">X</label>
-                    <input type="text" class="form-control" id="x">
+                    <input type="number" class="form-control" id="x" name="x" step="0.01">
                 </div>
                 <div class="form-group col-sm-6">
                     <label for="y">Y</label>
-                    <input type="text" class="form-control" id="y">
+                    <input type="number" class="form-control" id="y" name="y" step="0.01">
                 </div>
             </div>
             <div class="d-flex justify-content-end">
-                <button class="btn btn-primary mr-2">Add</button>
-                <button class="btn btn-primary" disabled>Calculate</button>
+                <button class="btn btn-primary mr-2" name="add">Add</button>
+                <button class="btn btn-primary" name="calculate" disabled>Calculate</button>
             </div>
         </form>
+        <div class="table-responsive">
+            <table class="table table-sm">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">X</th>
+                        <th scope="col">Y</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
     </div>
+    <script src="scripts.js/pearsonRegression.js"></script>
+    <script src="scripts.js/script.js"></script>
 </body>
 </html>
