--- a/pearson-regression/index.html
+++ b/pearson-regression/index.html
@@ -37,7 +37,12 @@
                 <tbody></tbody>
             </table>
         </div>
+        <div class="result">
+            <canvas id="scatterplot" width="400" height="400" hidden></canvas>
+        </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+    <script src="scripts.js/scatterplot.js"></script>
     <script src="scripts.js/pearsonRegression.js"></script>
     <script src="scripts.js/script.js"></script>
 </body>
