--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <a class="list-group-item list-group-item-action" href="key-value/">Key Value</a>
             <a class="list-group-item list-group-item-action" href="lorem-ipsum-generator/">Lorem Ipsum Generator</a>
             <a class="list-group-item list-group-item-action" href="notes/">Notes</a>
+            <a class="list-group-item list-group-item-action" href="pearson-regression/">Pearson Regression</a>
         </div>
     </div>
 </body>
