--- a/pomodoro-clock/index.html
+++ b/pomodoro-clock/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro Clock</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1 class="text-center my-4">Pomodoro Clock</h1>
+        <h4 class="session text-center">Working Session</h4>
+        <p class="clock text-center">25:00</p>
+        <div class="d-flex justify-content-center">
+            <button class="btn btn-primary btn-lg">Start</button>
+            <button class="btn btn-danger btn-lg mx-2">Stop</button>
+            <button class="btn btn-secondary btn-lg">Reset</button>
+        </div>
+    </div>
 </body>
 </html>
