--- a/pomodoro-clock/index.html
+++ b/pomodoro-clock/index.html
@@ -5,19 +5,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro Clock</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <audio src="audio/alarm.mp3"></audio>
     <div class="container">
         <h1 class="text-center my-4">Pomodoro Clock</h1>
         <h4 class="session text-center">Working Session</h4>
-        <p class="clock text-center">25:00</p>
-        <div class="d-flex justify-content-center">
-            <button class="btn btn-primary btn-lg">Start</button>
-            <button class="btn btn-danger btn-lg mx-2">Stop</button>
-            <button class="btn btn-secondary btn-lg">Reset</button>
+        <p class="clock text-center">00:00</p>
+        <div class="d-flex justify-content-center mb-4">
+            <button class="btn btn-primary btn-lg start">
+                <svg class="bi bi-play-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M11.596 8.697l-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 010 1.393z"/>
+                </svg>
+            </button>
+            <button class="btn btn-danger btn-lg mx-2 stop">
+                <svg class="bi bi-stop-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M5 3.5h6A1.5 1.5 0 0112.5 5v6a1.5 1.5 0 01-1.5 1.5H5A1.5 1.5 0 013.5 11V5A1.5 1.5 0 015 3.5z"/>
+                </svg>
+            </button>
+            <button class="btn btn-secondary btn-lg reset">
+                <svg class="bi bi-skip-start-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M4.5 3.5A.5.5 0 004 4v8a.5.5 0 001 0V4a.5.5 0 00-.5-.5z" clip-rule="evenodd"/>
+                    <path d="M4.903 8.697l6.364 3.692c.54.313 1.232-.066 1.232-.697V4.308c0-.63-.692-1.01-1.232-.696L4.903 7.304a.802.802 0 000 1.393z"/>
+                </svg>
+            </button>
+            <button class="btn btn-info btn-lg config ml-2" data-toggle="collapse" data-target="#config" aria-expanded="false" aria-controls="config">
+                <svg class="bi bi-gear-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 01-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 01.872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 012.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 012.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 01.872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 01-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 01-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 100-5.86 2.929 2.929 0 000 5.858z" clip-rule="evenodd"/>
+                </svg>
+            </button>
+        </div>
+        <div class="collapse" id="config">
+            <div class="card">
+                <div class="card-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-3">
+                                <label for="work">Work</label>
+                                <div class="input-group">
+                                    <input class="form-control" type="number" name="work" id="work" value="25" min="1" max="60" aria-describedby="work-addon" required>
+                                    <div class="input-group-append">
+                                        <span class="input-group-text" id="work-addon">min</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group col-sm-3">
+                                <label for="break">Break</label>
+                                <div class="input-group">
+                                    <input class="form-control" type="number" name="break" id="break" value="5" min="1" max="60" aria-describedby="break-addon" required>
+                                    <div class="input-group-append">
+                                        <span class="input-group-text" id="break-addon">min</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group col-sm-3">
+                                <label for="long">Long Break</label>
+                                <div class="input-group">
+                                <input class="form-control" type="number" name="long" id="long" value="10" min="1" max="60" aria-describedby="long-addon" required>
+                                    <div class="input-group-append">
+                                        <span class="input-group-text" id="long-addon">min</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group col-sm-3">
+                                <label for="delay">Delay</label>
+                                <div class="input-group">
+                                <input class="form-control" type="number" name="delay" id="delay" value="2" min="1" max="10" aria-describedby="delay-addon" required>
+                                    <div class="input-group-append">
+                                        <span class="input-group-text" id="delay-addon">sec</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <button class="btn btn-primary apply mr-2">Apply</button>
+                            <button class="btn btn-secondary cancel" type="reset">Cancel</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
