--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <a class="list-group-item list-group-item-action" href="lorem-ipsum-generator/">Lorem Ipsum Generator</a>
             <a class="list-group-item list-group-item-action" href="notes/">Notes</a>
             <a class="list-group-item list-group-item-action" href="pearson-regression/">Pearson Regression</a>
+            <a class="list-group-item list-group-item-action" href="pomodoro-clock/">Pomodoro Clock</a>
         </div>
     </div>
 </body>
