--- a/roman-to-decimal-converter/index.html
+++ b/roman-to-decimal-converter/index.html
@@ -29,6 +29,7 @@
             <button class="btn btn-secondary" type="reset">Clear</button>
         </form>
     </div>
-    <script src="script.js"></script>
+    <script src="scripts/error.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
