--- a/quiz/index.html
+++ b/quiz/index.html
@@ -5,11 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-light">
     <div class="container">
         <h1 class="text-center my-4">Quiz</h1>
+        <div class="alert alert-warning" role="alert" style="display: none;">
+            <h5>Connection failure</h5>
+            <p>Something is wrong. Please try again later.</p>
+            <hr>
+            <button class="btn btn-outline-warning retry">
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="display: none;"></span>
+                 Loading...
+            </button>
+        </div>
         <form class="config mb-4">
             <div class="form-group">
                 <label for="n">Number of Questions</label>
@@ -38,10 +46,17 @@
                     <option value="boolean">True / False</option>
                 </select>
             </div>
-            <button type="submit" class="btn btn-primary">Start</button>
+            <button type="submit" class="btn btn-primary">
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="display: none;"></span>
+                Start
+            </button>
         </form>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="scripts/util.js"></script>
+    <script src="scripts/api.js"></script>
+    <script src="scripts/cookies.js"></script>
+    <script src="scripts/quiz.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
