--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <a class="list-group-item list-group-item-action" href="pearson-regression/">Pearson Regression</a>
             <a class="list-group-item list-group-item-action" href="pomodoro-clock/">Pomodoro Clock</a>
             <a class="list-group-item list-group-item-action" href="roman-to-decimal-converter/">Roman to Decimal Converter</a>
+            <a class="list-group-item list-group-item-action" href="quiz/">Quiz</a>
         </div>
     </div>
 </body>
