--- a/random-meal-generator/index.html
+++ b/random-meal-generator/index.html
@@ -5,7 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Meal Generator</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h1 class="text-center my-4">Random Meal Generator</h1>
+        <div class="meal mb-4">
+            <h3 class="text-center">Fettucine alfredo</h3>
+            <div class="d-flex flex-row mb-3">
+                <img src="https://www.themealdb.com/images/media/meals/uquqtu1511178042.jpg" alt="Meal Thumb" width="400" class="img-thumbnail align-self-start d-none d-lg-block d-md-block">
+                <ul>
+                    <li>227g Clotted Cream</li>
+                    <li>25g Butter</li>
+                    <li>1 tsp Corn Flour</li>
+                    <li>100g Parmesan Cheese</li>
+                    <li>Grated Nutmeg</li>
+                    <li>250g Fettuccine</li>
+                    <li>Chopped Parsley</li>
+                </ul>
+            </div>
+            <ol>
+                <li>In a medium saucepan, stir the clotted cream, butter and cornflour over a low-ish heat and bring to a low simmer. Turn off the heat and keep warm.</li>
+                <li>Meanwhile, put the cheese and nutmeg in a small bowl and add a good grinding of black pepper, then stir everything together (don’t add any salt at this stage).</li>
+                <li>Put the pasta in another pan with 2 tsp salt, pour over some boiling water and cook following pack instructions (usually 3-4 mins). When cooked, scoop some of the cooking water into a heatproof jug or mug and drain the pasta, but not too thoroughly.</li>
+                <li>Add the pasta to the pan with the clotted cream mixture, then sprinkle over the cheese and gently fold everything together over a low heat using a rubber spatula. When combined, splash in 3 tbsp of the cooking water. At first, the pasta will look wet and sloppy: keep stirring until the water is absorbed and the sauce is glossy. Check the seasoning before transferring to heated bowls. Sprinkle over some chives or parsley, then serve immediately.</li>
+            </ol>
+        </div>
+        <div class="row">
+            <div class="col text-center">
+                <button type="button" class="btn btn-primary btn-lg">Random Meal</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
