--- a/quiz/index.html
+++ b/quiz/index.html
@@ -48,8 +48,9 @@
             </div>
             <button type="submit" class="btn btn-primary">
                 <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="display: none;"></span>
-                Start
+                Start Quiz
             </button>
+            <button type="reset" class="btn btn-secondary" style="display: none;">Reset Session</button>
         </form>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
