--- a/random-meal-generator/index.html
+++ b/random-meal-generator/index.html
@@ -24,10 +24,13 @@
                 <ul class="ingredients"></ul>
             </div>
             <div class="instructions"></div>
+            <div class="video embed-responsive embed-responsive-16by9" hidden>
+                <iframe class="embed-responsive-item" src="" allowfullscreen></iframe>
+            </div>
         </div>
         <div class="row">
             <div class="col text-center">
-                <button type="button" class="btn btn-primary">
+                <button type="button" class="btn btn-primary mb-4">
                     <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" hidden></span>
                     Random Meal
                 </button>
