--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="list-group my-4">
             <a class="list-group-item list-group-item-action" href="bin2dec/">Bin2Dec</a>
             <a class="list-group-item list-group-item-action" href="border-radius-previewer/">Border Radius Previewer</a>
-            <a class="list-group-item list-group-item-action" href="calculator/">calculator</a>
+            <a class="list-group-item list-group-item-action" href="calculator/">Calculator</a>
             <a class="list-group-item list-group-item-action" href="cause-effect/">Cause & Effect</a>
             <a class="list-group-item list-group-item-action" href="christmas-lights/">Christmas Lights</a>
             <a class="list-group-item list-group-item-action" href="color-cycle/">Color Cycle</a>
