--- a/product-landing-page/index.html
+++ b/product-landing-page/index.html
@@ -4,8 +4,113 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Landing Page</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="container">
+        <img src="https://via.placeholder.com/150x50.png?text=COMPANY+LOGO" alt="Company Logo">
+        <h1>This will be the main headline you can edit</h1>
+        <p>This should be used to tell a story and let you user know a little more about your product or service. How can you benefit them?</p>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Benefit headline</h5>
+                <p>Supporting call-to-action goes here</p>
+                <form>
+                    <div class="form-group">
+                        <label for="fname">First name</label>
+                        <input type="text" class="form-control" id="fname">
+                    </div>
+                    <div class="form-group">
+                        <label for="lname">Last name</label>
+                        <input type="text" class="form-control" id="lname">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="text" class="form-control" id="email">
+                    </div>
+                    <button type="submit" class="btn btn-primary">CALL TO ACTION</button>
+                </form>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <h5>Featured Headline</h5>
+                <img src="https://via.placeholder.com/85.png" alt="Feature Image">
+                <p>This should be used to tell a story and talk about your product</p>
+            </div>
+            <div class="col-sm-4">
+                <h5>Featured Headline</h5>
+                <img src="https://via.placeholder.com/85.png" alt="Feature Image">
+                <p>This should be used to tell a story and talk about your product</p>
+            </div>
+            <div class="col-sm-4">
+                <h5>Featured Headline</h5>
+                <img src="https://via.placeholder.com/85.png" alt="Feature Image">
+                <p>This should be used to tell a story and talk about your product</p>
+            </div>
+        </div>
+        <div>
+            <h3>Supporting headline goes here</h3>
+            <img src="https://via.placeholder.com/250.png" alt="Supporting Image">
+            <h5>Featured Headline Here</h5>
+            <p>This should used to tell a story and let your users know a little more about your product or service. How can you benefit them?</p>
+        </div>
+        <h3>Testimonial Section</h3>
+        <div class="row">
+            <div class="col">
+                <img src="https://via.placeholder.com/75.png?text=Photo" alt="Profile Image" class="rounded-circle">
+                <h5>Full Name</h5>
+                <span>Position</span>
+                <p>"This should be used to tell a story and include any testimonials you might have about your product or service."</p>
+            </div>
+            <div class="col">
+                <img src="https://via.placeholder.com/75.png?text=Photo" alt="Profile Image" class="rounded-circle">
+                <h5>Full Name</h5>
+                <span>Position</span>
+                <p>"This should be used to tell a story and include any testimonials you might have about your product or service."</p>
+            </div>
+        </div>
+        <h3>Process breakdown</h3>
+        <div class="row">
+            <div class="col-sm-4">
+                <!-- Icon -->
+                <h5>Step</h5>
+                <p>This should be used to explain the steps and let your users know a little more about it.</p>
+            </div>
+            <div class="col-sm-4">
+                <!-- Icon -->
+                <h5>Step</h5>
+                <p>This should be used to explain the steps and let your users know a little more about it.</p>
+            </div>
+            <div class="col-sm-4">
+                <!-- Icon -->
+                <h5>Step</h5>
+                <p>This should be used to explain the steps and let your users know a little more about it.</p>
+            </div>
+        </div>
+        <h4>Endorsed by companies</h4>
+        <div class="row">
+            <div class="col">
+                <img src="https://via.placeholder.com/150x50.png?text=Company+Logo" alt="Logo Company">
+            </div>
+            <div class="col">
+                <img src="https://via.placeholder.com/150x50.png?text=Company+Logo" alt="Logo Company">
+            </div>
+            <div class="col">
+                <img src="https://via.placeholder.com/150x50.png?text=Company+Logo" alt="Logo Company">
+            </div>
+            <div class="col">
+                <img src="https://via.placeholder.com/150x50.png?text=Company+Logo" alt="Logo Company">
+            </div>
+            <div class="col">
+                <img src="https://via.placeholder.com/150x50.png?text=Company+Logo" alt="Logo Company">
+            </div>
+        </div>
+        <h3>This will be the main headline you can edit</h3>
+        <p>This should be used to tell a story and let your users know a little more about your product or service. How can you benefit them?</p>
+        <button type="button" class="btn btn-primary">CALL TO ACTION</button>
+
+        <p>Copyright © 2020 All Rights Reserved.</p>
+    </div>
 </body>
 </html>
